2005-09-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): re-added 'ScrollBar.width' default.
	
2005-09-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicArrowButton.java
	(buttonBorder.paintBorder): fixed drawing issues,
	(getMaximumSize): return constant value,
	(getMinimumSize): likewise,
	(getPreferredSize): likewise.
	
2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR swing/23558
	* javax/swing/plaf/basic/BasicComboBoxUI.java
	(FocusHandler.focusLost): Do not call popup.hide.

2005-09-08  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java (static): Fix typo
	(Grahics -> Graphics).

2005-09-08  Tom Tromey  <tromey@redhat.com>

	* examples/gnu/classpath/examples/swing/ClasspathSwingActivityBoard.launch:
	New file.

2005-09-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(MetalLookAndFeel): Only load default theme if no theme has been
	set before.
	(initComponentDefaults): Fixed and added color default values
	for various components.

2005-09-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/awt/Container.java:
	(findComponentForMouseEventAt): Removed check for opacity.

2005-09-08  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/processor/VirtualMachineCommandSet.java
	(executeVersion): Major and minor version are integers, not bytes.

2005-09-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/awt/Container.java:
	(findComponentForMouseEventAt): New implementation method.
	(getDeepestComponentForMouseEventAt): New implementation method.
	(acquireComponentForMouseEvent): Replaced call to
	AWTUtilities.getDeepestComponentAt with call to new implementation
	method getDeepestComponentAt to appropriately handle transparent
	components with no MouseListeners attached.
	
2005-09-08  Tom Tromey  <tromey@redhat.com>

	* .classpath: Enable compilation of jdwp.
