@@ -1,3 +1,13 @@
+2005-09-09  Jeroen Frijters  <jeroen@frijters.net>
+
+	* java/io/ObjectInputStream.java: Removed static initializer.
+	* java/io/ObjectOutputStream.java: Removed static initializer.
+	* vm/reference/java/io/VMObjectInputStream.java: Added static
+	initializer.
+	(oisClass, vmoisClass): Removed unused fields.
+	* vm/reference/java/io/VMObjectStreamClass.java: Added static
+	initializer.
+
 2005-09-09  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/swing/plaf/basic/BasicLookAndFeel.java
